# cclient

./: .ghci  .gitignore  cclient  cclient.cabal  config.json  design.txt
cclient-commandline/: Main.hs
cclient-commandline/CClient/CommandLine/: Directive.hs  Main.hs  Response.hs  ResultStats.hs  Types.hs  Worker.hs
script/: build.sh  run-cli.sh  test.sh
src/: CClient.hs  ReferenceProps.hs
src/CClient/: CSV.hs  Process.hs  Types.hs  Util.hs
